# stopgap

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile.test  README.md  compose.test.yml
.github/workflows/: ci.yml  release-cli.yml  release-extensions.yml
.ralph/: ralph-history.json  ralph-loop.state.json  ralph-tasks.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/plts/: Cargo.toml  build.rs  plts.control
crates/plts/src/: api.rs  arg_mapping.rs  compiler.rs  compiler_core.rs  compiler_service.rs  function_program.rs  function_program_core.rs  handler.rs  isolate_pool.rs  lib.rs  observability.rs  runtime.rs  runtime_core.rs  runtime_lockdown.js  runtime_spi.rs  tsgo_runtime.d.ts
crates/plts/tests/pg/: arg_conversion.rs  artifact_catalog.rs  metrics.rs  mod.rs  runtime_artifact_pointer.rs  runtime_async.rs  runtime_contract.rs  runtime_db_input_forms.rs  runtime_module_imports.rs  runtime_nulls.rs  runtime_performance_baseline.rs  runtime_readiness_baseline.rs  runtime_stopgap_wrappers.rs  runtime_surface_lockdown.rs
crates/stopgap/: Cargo.toml  stopgap.control
crates/stopgap-cli/: Cargo.toml
crates/stopgap-cli/src/: lib.rs  main.rs
crates/stopgap-cli/templates/: example.ts
crates/stopgap-cli/tests/: command_integration.rs
crates/stopgap/src/: api.rs  api_ops.rs  deployment_state.rs  deployment_utils.rs  domain.rs  lib.rs  observability.rs  runtime_config.rs  security.rs  sql_bootstrap.rs
crates/stopgap/tests/pg/: call_fn.rs  deploy_import_map.rs  deploy_overload_rejection.rs  deploy_pointer.rs  helpers.rs  metrics.rs  mod.rs  rollback.rs  security_acl.rs  security_definer.rs
crates/stopgap/tests/pg_regress/expected/: deploy.out  diff.out  prune.out  rollback.out  security.out  setup.out
crates/stopgap/tests/pg_regress/sql/: deploy.sql  diff.sql  prune.sql  rollback.sql  security.sql  setup.sql
docs/: DEPLOYMENT-RUNBOOK.md  DEVELOPER-QUICKSTART.md  PERFORMANCE-BASELINE.md  PROJECT-OUTLINE.md  ROADMAP.md  RUNTIME-CONTRACT.md  TECH-DEBT.md  TROUBLESHOOTING.md
scripts/: release-version.sh
