[workspace]
members = [
    "crates/common",
    "crates/plts",
    "crates/stopgap",
    "crates/stopgap-cli",
]
resolver = "2"

[workspace.package]
authors = ["Mikhail Vedernikov"]
repository = "https://github.com/Smertos/stopgap"
license = "MIT"

[workspace.dependencies]
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.package.plts]
strip = "symbols"

[profile.release.package.stopgap]
strip = "symbols"
