[package]
name = "plts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_plts"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []
v8_runtime = ["dep:deno_core", "dep:deno_error"]

[dependencies]
common = { path = "../common" }
pgrx = "=0.17.0"
deno_core = { version = "0.369", optional = true }
deno_error = { version = "0.7", optional = true }
deno_ast = { version = "0.51", features = ["transpiling"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
pgrx-tests = "=0.17.0"
