[package]
name = "stopgap-cli"
version = "0.1.4"
edition = "2024"
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "CLI for deploying and operating stopgap environments."

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cli-v{ version }/stopgap-{ target }-v{ version }{ archive-suffix }"
bin-dir = "stopgap-{ target }-v{ version }/stopgap{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "stopgap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
